<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grape"
            android:elevation="4dp"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:contentDescription="@string/icon_profile"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user" />

    <EditText
        android:id="@+id/etvFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:autofillHints="name"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_information"
        android:drawablePadding="8dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/etvLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="name"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_information"
        android:drawablePadding="8dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHighlight="@color/cardview_dark_background" />

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/save"
        android:textColor="@color/white"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_width="4dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:visibility="gone" />

</LinearLayout>