<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textColor="@color/grape"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tvCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/taupe_gray"
        android:textSize="@dimen/text_size_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/taupe_gray" />

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bkg_selector_round"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/edit_profile"
        android:textSize="22sp"
        app:drawableEndCompat="@drawable/ic_arrow"
        app:drawableStartCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bkg_selector_round"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/logout"
        android:textSize="22sp"
        app:drawableEndCompat="@drawable/ic_arrow"
        app:drawableStartCompat="@drawable/ic_logout" />


</LinearLayout>