<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSenderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_information" />

    <TextView
        android:id="@+id/tvSenderPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/receiver"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvReceiverName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_information" />

    <TextView
        android:id="@+id/tvReceiverPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/information"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/grape"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_yunus" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/tvConcept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_concept" />

</LinearLayout>