<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/grape"
                android:textSize="36sp"
                android:textStyle="bold" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                app:ccp_autoFormatNumber="true" />

            <EditText
                android:id="@+id/etvPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="phone"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/night"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/etvOTP"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:digits="0123456789"
                android:drawableStart="@drawable/ic_otp"
                android:drawablePadding="8dp"
                android:hint="@string/otp"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/night"
                android:textColorHighlight="@color/cardview_dark_background"
                android:visibility="gone" />

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/login"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_width="4dp" />

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:cornerRadius="20dp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_width="4dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>