<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grape"
            android:elevation="4dp"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/who_is_receiving"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/icon_profile"
                        android:src="@drawable/ic_profile" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/search_user"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/ic_information" />

                        <TextView
                            android:id="@+id/tvPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/search_user"
                            app:drawableStartCompat="@drawable/ic_phone" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/amount"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/zero"
                        android:textColor="@color/grape"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_yunus" />

                    <TextView
                        android:id="@+id/tvContributionRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/zero"
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_yunus" />

                    <TextView
                        android:id="@+id/tvRealAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/zero"
                        android:textColor="@color/fern_green"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_yunus" />

                    <TextView
                        android:id="@+id/tvConcept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/ic_concept" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/transfer"
        android:textColor="@color/white" />

</LinearLayout>